--- a/life.Rmd
+++ b/life.Rmd
@@ -41,9 +41,44 @@ abline(h = 100, col = "red")
 ## The Human Mortality Database
 
 ```{r dataswed}
-deaths <- read.table("data/HMD/Deaths_1x1.txt", header = TRUE, skip = 3)
-head(deaths)
-expos <- read.table("data/HMD/Exposures_1x1.txt", header = TRUE, skip = 3)
-head(expos)
-rates <- read.table("data/HMD/Mx_1x1.txt", header = TRUE, skip = 3)
+deaths <- read.table("data/HMD/Deaths_1x1.txt", header = TRUE, skip = 3, stringsAsFactors = FALSE, na.strings = ".")
+##head(deaths)
+expos <- read.table("data/HMD/Exposures_1x1.txt", header = TRUE, skip = 3, stringsAsFactors = FALSE, na.strings = ".")
+##head(expos)
+rates <- read.table("data/HMD/Mx_1x1.txt", header = TRUE, skip = 3, stringsAsFactors = FALSE, na.strings = ".")
+str(rates)
 ```
+
+We note that the variable *Age* is a *character variable*: It is because the last, open class has the label "110+". We change that to "110" and make *Age* a numeric variable.
+
+```{r makeAge_numeric}
+deaths$Age[deaths$Age == "110+"] <- "110"
+deaths$Age <- as.integer(deaths$Age)
+##
+expos$Age[expos$Age == "110+"] <- "110"
+expos$Age <- as.integer(expos$Age)
+##
+rates$Age[rates$Age == "110+"] <- "110"
+rates$Age <- as.integer(rates$Age)
+```
+
+### Females
+
+```{r females}
+females <- rates[["Female"]]
+fem <- matrix(females, nrow = 111)
+colnames(fem) <- 1751:2016
+rownames(fem) <- 0:110
+```
+
+### Calendar time averages 
+
+The table with ten-year agerages is loaded.
+
+```{r averrate}
+aver <- read.table("data/HMD/Mx_1x10.txt", header = TRUE, skip = 3, stringsAsFactors = FALSE, na.strings = ".")
+afemales <- aver[["Female"]]
+afem <- matrix(afemales, nrow = 111)
+rownames(fem) <- 0:110
+```
+
