--- a/life.Rmd
+++ b/life.Rmd
@@ -82,3 +82,8 @@ afem <- matrix(afemales, nrow = 111)
 rownames(fem) <- 0:110
 ```
 
+## The International Database on Longevity
+
+```{r idldata}
+usa <- read.table("data/IDL/usa.csv", header = TRUE, sep = ";")
+```
