--- a/slide2.Rmd
+++ b/slide2.Rmd
@@ -1,6 +1,7 @@
 ---
 output:
   beamer_presentation:
+    keep_tex: true  
     fig_caption: no
     fig_width: 5
     includes:
@@ -14,7 +15,7 @@ output:
 knitr::opts_chunk$set(echo = FALSE, message = FALSE, fig.width = 11, warning = FALSE)
 ```
 
-## Extremes, Decembern 2017
+## Extremes, December 2017
 
 \includegraphics[width=\textwidth]{myfigs/rootzen.png}
 
@@ -26,11 +27,11 @@ Received from: [Zentralblatt für Mathematik](https://zbmath.org).
 
 ## What it is about
 
-*   Is human life unlimited?
-*   Are there any differences in survival at extreme age between 
+*   Is human life \textcolor{blue}{unlimited}?
+*   Are there any \textcolor{blue}{differences in survival} at extreme age between 
     *   women and men, 
     *   different socioeconomic groups, 
-    *   etc?n
+    *   etc?
 
 <!--
 *   What will the record life-length be the coming 25 years?    
@@ -50,20 +51,20 @@ World's oldest person since 21 April, 2018. Age: 117.
 
 \includegraphics[width=\textwidth]{myfigs/chiyo_dead.png}
 
-**Now oldest:** *Kane Tanaka*, Japan (115 years and 205 days).
+**Now oldest:** \textcolor{blue}{Kane Tanaka}, Japan (115 years and 205 days).
 
 ## SCB data on old age mortality
 
-Deaths by age and year:n
+Deaths by age and year
 
 ```{r scb}
-library(Sweden)
-x <- getDeaths(ages = 97:100, years = 2007:2014)
+##library(Sweden)
+x <- Sweden::getDeaths(ages = 97:100, years = 2007:2014)
 rownames(x) = c(97:99, "100+")
 knitr::kable(x)         
 ```
 
-Not very useful (100+).
+\textcolor{red}{Not} very useful (100+).
 
 ## International Database on Longevity
 
@@ -80,7 +81,7 @@ Not very useful (100+).
 [https://www.mortality.org](https://www.mortality.org)
 
 *   Contains no individual data.
-*   But very useful tables.
+*   But very \textcolor{blue}{useful tables}.
 
 ## svt.se, October 2016
 
@@ -114,7 +115,7 @@ Not very useful (100+).
 \end{columns}
 
 \begin{center}
-Problems with this "statistical" analysis?
+Any \textcolor{red}{problems} with this "statistical analysis"?
 \end{center}
 
 ## Dong, Milholland & Vijg, Nature 2016: Problems.
@@ -150,7 +151,7 @@ usa <- read.table("data/IDL/USA/usa.csv", header = TRUE, sep = ";")
 usa$year <- usa$Date.of.death
 usa$age <- usa$Age.days. / 365.2425
 usa$date <- usa$year + runif(NROW(usa), 0, 0.999)
-with(usa, plot(date, age, pch = ".", cex = 3, las = 1, xlim = c(1968, 2008), ylim = c(110, 123), 
+with(usa, plot(date, age, pch = ".", cex = 5, las = 1, xlim = c(1968, 2008), ylim = c(110, 123), 
      xlab = "Date", ylab = "Age", axes = FALSE))
 axis(1, at = c(1968, 1980, 1987, 1996, 2004, 2007), las = 2)
 axis(2, las = 1)
@@ -160,20 +161,20 @@ uk <- read.table("data/IDL/UK/uk.csv", header = TRUE, sep = ";")
 uk$age <- uk$Age.days. / 365.2425
 uk$year <- as.numeric(substr(uk$Date.of.death, 7, 10))
 uk$date <- uk$year + runif(NROW(uk), 0, 0.999)
-points(uk$date, uk$age, col = "red", pch = ".", cex = 3)
+points(uk$date, uk$age, col = "red", pch = ".", cex = 5)
 ##
 france <- read.table("data/IDL/France/france.csv", header = TRUE, sep = ";")
 france$age <- france$Age.days. / 365.2425
 france$year <- as.numeric(substr(france$Date.of.death, 7, 10))
 france$date <- france$year + runif(NROW(france), 0, 0.999)
-points(france$date, france$age, col = "blue", pch = ".", cex = 3)
+points(france$date, france$age, col = "blue", pch = ".", cex = 5)
 japan <- read.table("data/IDL/Japan/japan.csv", header = TRUE, sep = ";")
 japan$age <- japan$Age.days. / 365.2425
 japan$year <- as.numeric(substr(japan$Date.of.death, 7, 10))
 japan$date <- japan$year + runif(NROW(japan), 0, 0.999)
-points(japan$date, japan$age, col = "orange", pch = ".", cex = 3)
+points(japan$date, japan$age, col = "orange", pch = ".", cex = 5)
 abline(v = 1968:2007)
-text(2003, 122.5, "< Jeanne Calment", col = "blue")
+text(2003, 122.5, "< Jeanne Calment", col = "blue", cex = 1 / 1.5)
 jeanne <- france[france$age > 120, c("age", "date")]
 up <- jeanne$age - 110
 x <- c(jeanne$date - up, jeanne$date)
@@ -192,6 +193,24 @@ Japan & 1996 & 2005 \\
 \end{tabular}
 
 
+## Number of deaths by year
+
+```{r deathsbyyear}
+par(cex = 1)
+vars <- c("year", "age", "date")
+all <- rbind(uk[, vars],
+             usa[, vars],
+             france[, vars],
+             japan[, vars])
+year <- seq(min(all$year), max(all$year))
+deaths <- numeric(length(year))
+for (i in 1:length(deaths)){
+    deaths[i] <- sum(all$year == year[i])
+}
+barplot(deaths, names.arg = year, xlab = "Year", 
+        ylab = "No. of deaths", las = 2)
+abline(h = 0)
+```
 
 ## Nature, 2017
 
@@ -318,12 +337,12 @@ abline(v = c(1969, 2014, 2015), lty = 2)
 
 Two serious blows:
 
-1.   Extreme values do not behave like "normal" data.
-2.   The data suffer from length bias.
+1.   \textcolor{red}{Extreme values} do \textcolor{blue}{not} behave like "normal" data.
+2.   The data suffer from \textcolor{red}{length bias}.
 
 and one conclusion:
 
-1.   There is no aging after age 110!
+1.   There is \textcolor{red}{no aging} after age 110!
 
 ## The Generalized Pareto (GP) distribution
 
@@ -344,6 +363,7 @@ x <- seq(0, 10, length = 1000)
 y1 <- h(x)
 plot(x, y1, type = "l", ylim = c(0, 5), col = "blue", axes = FALSE, xlab = "Age", 
      ylab = "Force of mortality", main = expression(paste("(a) ", gamma,  " = -0.25")))
+abline(v = - sigma / gamma, lty = 3)
 axis(1, at = c(0, 5, 10), labels = c(110, 115, 120))
 axis(2, las = 1)
 box()
@@ -407,16 +427,128 @@ points(2006.25, 113.25, pch = "+")
 \small
 
 *   The apparent trend break in the figure is
-an artifact caused by *inappropriate* combination of data from different time periods.
+an artifact caused by \textcolor{red}{inappropriate combination of data} from different time periods.
 
 *   The conclusion “our data strongly suggest that the
-duration of life is limited” is based on *wrong* and *misleading*
-analysis.
+duration of life is limited” is based on \textcolor{red}{wrong and misleading analysis}.
+
+## Results, Rootzen & Zholud
+
+*   "Life is unlimited but short": \textcolor{red}{$\gamma = 0$}, $\sigma = 1.34$
+    *    \alert{No aging} after age 105.
+    *    Expected remaining life at age $t, t > 105$: \textcolor{red}{1.34 years}.
+    *    Probability of surviving one year: \textcolor{red}{47 per cent}.
+*   *Interpretation:* At each birthday after 105, flip a coin. If heads, survive until next birthday, if tails, die before next birthdate.
+*   \textcolor{red}{No difference} between countries, sexes, birth cohorts.
+
+
+## Expectation of extremes
+
+```{r}
+sur <- function(x, n = 1) 1 - (1 - exp(-x / 1.34))^n
+Esur <- function(m){
+    if (m <= 0){
+        res <- 0 #integrate(sur, 0, Inf, n = 1)$value
+    }else{
+        res <- integrate(sur, 0, Inf, n = m)$value
+    }
+    res
+}
+
+nn <- 1:100
+yval <- numeric(100)
+for (i in nn){
+    yval[i] <- Esur(i)
+}
+plot(nn, yval, ylim = c(0, 7), xlab = "No. of observations", ylab = "E(max(obs))", type = "b", col = "blue", )
+##print(deaths)
+```
+
+## The original plot, expectation added
+
+```{r orig, fig.width = 11, fig.height = 8, eval = TRUE}
+par(cex = 2)
+deaths <- with(all, table(year))
+yl <- numeric(length(deaths))
+for (i in 1:length(deaths)){
+    if (deaths[i] == 0){
+        yl[i] <- 110
+    }else{
+        yl[i] <- Esur(deaths[i]) + 110
+    }
+}
+plot(names(deaths), yl, type = "l", col = "black", ylim = c(110, 123), lwd = 3, xlab = "Year", 
+     ylab = "Max(Age at death)", lty = 1, axes = FALSE)
+axis(1, at = c(1968, 1980, 1995, 2006))
+axis(2, las = 1)
+box()
+y1 <- year[1:(1996-1968)] * 0.1531 - 191.7
+
+maxage <- with(all, tapply(age, year, max))
+points(names(maxage), maxage, col = "red", lwd = 2)
+points(names(maxage)[1:21], maxage[1:21], col = "blue",lwd = 2)
+x <- c(1968, 1994)
+y <- 0.1531 * x - 191.07
+lines(x, y, col = "blue", lwd = 3)
+x <- c(1995, 2006)
+y <- 667.5 - 0.2762 * x
+lines(x, y, col = "red", lwd = 3)
+```
+
 
 ## James Vaupel, later
 
 \Large
-"I was outraged that Nature, a journal I highly respect, would publish such a travesty." 
+"I was \textcolor{red}{outraged} that \textcolor{red}{Nature}, a journal I highly respect, would publish such a \textcolor{red}{travesty}." 
+
+## Data from FOB and Lisa
+
+\scriptsize
+
+**Birth** information (11 566 545 individuals):
+
+```{r birthinfo,results='asis'}
+soc <- readRDS("../Data/U18006_RDS/inddata.rds")
+knitr::kable(head(soc, 3))
+```
+
+
+**Death** information (4 772 378 individuals):
+
+```{r deathinfo, results='asis'}
+dors <- readRDS("../Data/U18006_RDS/dors.rds")
+knitr::kable(head(dors[, c("LINNEID", "DODSDAT")], 3))
+```
+
+**Presence** information?
+
+## Presence information
+
+```{r presence, fig.width = 11, fig.height = 5}
+par(mfrow = c(1, 1))
+fobyears = seq(1960, 1990, by = 5)
+lisayears <- seq(1986, 2013, by = 1)
+plot(1, 1, xlim = c(1960, 2014), ylim = c(90, 115), type = "n", axes = FALSE, xlab = "Date", ylab = "Age")
+cuts <- c(fobyears + 10/12, seq(1995, 2005, by = 5), 2014)
+labs <- c(paste(fobyears, "-11-01", sep = ""), paste(c(seq(1994, 2004, by = 5), 2013), "-12-31", sep = ""))
+axis(1, at = cuts, labels = labs)
+axis(2, las = 1, at = c(90, 95, 100, 105, 107, 109, 111, 113, 115))
+box()
+
+text(1980, 112, "dead", cex = 1.5)
+abline(v = fobyears + 10 / 12, col = "blue")
+abline(v = lisayears + 1, col = "red")
+lines(c(1970 + 10/12 - 1, 1977 + 0.2), c(105 - 1, 105 + 7 - 10/12 + 0.2) + 1, lwd = 2)
+lines(c(1970 + 10/12 - 1 - 10 + 1, 1970 + 10/12 - 1), c(105 - 10 + 1, 105), lty = 2)
+points(1960 + 10/12, 96, cex = 2)
+text(1965, 96, "first seen", cex = 1.5)
+text(2010, 107, "last seen", cex = 1.5)
+points(1977 + 0.3, 113.3 - 10/12, pch = "+", cex = 3)
+lines(c(2012, 2014), c(105, 107), lwd = 2)
+lines(c(2012 - 16, 2012), c(105 - 16, 105), lty = 2)
+points(2014, 107, cex = 2)
+abline(h = 105)
+```
 
 ## Swedish data, 110+
 
@@ -425,17 +557,20 @@ s105 <- readRDS("mydata/per_105.rds")
 s105$sex = factor(s105$KON, labels = c("Men", "Women"))
 
 s110 <- eha::age.window(s105, c(110, 120))
+s110 <- eha::cal.window(s110, c(1969, 2014))
 source("R/drawLexis.R")
 n.m <- sum(s110$KON == 1)
 n.w <- sum(s110$KON == 2)
 ```
 
-```{r lexis110}
+```{r lexis110, fig.width = 11, fig.height = 5}
 par(las = 1)
-with(s110[s110$KON == 2, ], drawLexis(enter, exit, event, birthdate, col = "red" , xlim = c(1969, 2015), ylim = c(110, 115)))
+with(s110[s110$KON == 2, ], drawLexis(enter, exit, event, birthdate, col = "red",
+                                      at = c(1969, 1980, 1990, 2000, 2014),
+                                      xlim = c(1969, 2015), ylim = c(110, 115)))
 with(s110[s110$KON == 1, ], drawLexis(enter, exit, event, birthdate, col = "blue", add = TRUE))
 abline(h = 110)
-abline(v = c(1969, 2014), lty = 3)
+abline(v = c(1969, 2014), lty = 3, lwd = 2)
 abline(h = c(111, 112, 113, 114), lty = 3)
 legend("topleft", legend = c("Men", "Women"), col = c("blue", "red"), lty = 1)
 legend("top", legend = c("Dead", "Censored"), pch = c("+", "o"))
@@ -445,6 +580,18 @@ legend("top", legend = c("Dead", "Censored"), pch = c("+", "o"))
 
 There are `r n.w` women and `r n.m` men.
 
+## Check survival distribution
+
+```{r cumhaz110}
+library(eha)
+##with(s110, plot(Surv(enter - 110, exit - 110, event), mark.time = FALSE, fun = "cumhaz"))
+fit.c <- coxreg(Surv(enter-110, exit-110, event) ~ 1, data = s110)
+fit.w <- phreg(Surv(enter-110, exit-110, event) ~ 1, data = s110, dist = "pch")
+par(lwd = 2)
+check.dist(fit.c, fit.w, main = "Exponential distribution", col = c("red", "blue"))
+```
+
+<!--
 ## Analysis, all data, 110+
 
 \scriptsize
@@ -465,11 +612,14 @@ dr = drop1(fit, test = "Chisq")
 ltx(fit, dr = dr)
 ```
 
+-->
+
 ## Sweden, 105+
 
 ```{r lexis105}
 par(las = 1)
-with(s105[s105$KON == 2, ], drawLexis(enter, exit, event, birthdate, col = "red" , xlim = c(1969, 2015), ylim = c(105, 115)))
+s105 <- eha::cal.window(s105, c(1969, 2014))
+with(s105[s105$KON == 2, ], drawLexis(enter, exit, event, birthdate, col = "red" , xlim = c(1969, 2015), ylim = c(105, 115), at = c(1969, 1980, 1990, 2000, 2014)))
 with(s105[s105$KON == 1, ], drawLexis(enter, exit, event, birthdate, col = "blue", add = TRUE))
 abline(h = 105)
 abline(v = c(1969, 2014), lty = 3)
@@ -608,13 +758,18 @@ ltx(fit, dr = dr)
 
 Baseline hazard: `r round(fit$hazards[1, 1], 3)`.
 
-## Cumulative hazards by period by period
+## Cumulative hazards by period
 
 ```{r bysex}
 fit <- coxreg(Surv(enter, exit, event) ~ strata(cohort), data = c105)
 plot(fit, col = c("blue", "red", "black"), lwd = 1.5, lty = c(1, 2, 4), xlab = "Age", fn = "surv")
 abline(h = 0, v = 105)
 ```
+
+## Italy, 105+ 2009--2015 (Science June 29, 2018)
+
+\includegraphics[width=\textwidth]{myfigs/plateau.png}
+
 
 ## Skellefteå-Umeå data
 
